--- a/index.html
+++ b/index.html
@@ -614,6 +614,7 @@
   </span><span class="nl">"drip_bag_price"</span><span class="p">:</span><span class="w"> </span><span class="mi">40</span><span class="p">,</span><span class="w">
   </span><span class="nl">"roast"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
   </span><span class="nl">"flavor"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">"藍莓"</span><span class="p">,</span><span class="w"> </span><span class="s2">"柑橘"</span><span class="p">,</span><span class="w"> </span><span class="s2">"花香"</span><span class="p">],</span><span class="w">
+  </span><span class="nl">"image_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.jpg"</span><span class="p">,</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
 <blockquote>
@@ -644,7 +645,8 @@
     </span><span class="nl">"product_name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"耶家雪菲 日曬 古吉 夏奇索 魔魔拉單一莊園 G1"</span><span class="p">,</span><span class="w"> 
     </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="p">,</span><span class="w"> 
     </span><span class="nl">"unit_price"</span><span class="p">:</span><span class="w"> </span><span class="mi">450</span><span class="w">
-    </span><span class="nl">"quantity"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w"> 
+    </span><span class="nl">"quantity"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
+    </span><span class="nl">"product_image_url"</span><span class="p">:</span><span class="w"> </span><span class="s2">"https://upload.wikimedia.org/wikipedia/commons/4/45/A_small_cup_of_coffee.jpg"</span><span class="p">,</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">]</span><span class="w">
 </span></code></pre></div><h3 id='http-request-need-jwt-token'>HTTP Request  (need JWT token)</h3>
