publish: Add ground to orders API
generated from commit 4c5c5c20144da8d00d134919bc432e020efd0042

--- a/index.html
+++ b/index.html
@@ -867,7 +867,8 @@
         </span><span class="nl">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Msgr. Alane Botsford"</span><span class="p">,</span><span class="w">
         </span><span class="nl">"unit_price"</span><span class="p">:</span><span class="w"> </span><span class="mi">135</span><span class="p">,</span><span class="w">
         </span><span class="nl">"quantity"</span><span class="p">:</span><span class="w"> </span><span class="mi">4</span><span class="p">,</span><span class="w">
-        </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="w">
+        </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="p">,</span><span class="w">
+        </span><span class="nl">"ground"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="w">
       </span><span class="p">}</span><span class="w">
     </span><span class="p">],</span><span class="w">
     </span><span class="nl">"shipping_info"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -927,7 +928,8 @@
       </span><span class="nl">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"1 - 耶家雪菲 日曬 古吉 夏奇索 魔魔拉單一莊園 G1"</span><span class="p">,</span><span class="w">
       </span><span class="nl">"unit_price"</span><span class="p">:</span><span class="w"> </span><span class="mi">450</span><span class="p">,</span><span class="w">
       </span><span class="nl">"quantity"</span><span class="p">:</span><span class="w"> </span><span class="mi">1</span><span class="p">,</span><span class="w">
-      </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="w">
+      </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="p">,</span><span class="w">
+      </span><span class="nl">"ground"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="w">
     </span><span class="p">}</span><span class="w">
   </span><span class="p">],</span><span class="w">
   </span><span class="nl">"shipping_info"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -1023,7 +1025,8 @@
       </span><span class="nl">"name"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Ed Ondricka"</span><span class="p">,</span><span class="w">
       </span><span class="nl">"unit_price"</span><span class="p">:</span><span class="w"> </span><span class="mi">134</span><span class="p">,</span><span class="w">
       </span><span class="nl">"quantity"</span><span class="p">:</span><span class="w"> </span><span class="mi">6</span><span class="p">,</span><span class="w">
-      </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="w">
+      </span><span class="nl">"package_type"</span><span class="p">:</span><span class="w"> </span><span class="s2">"half_pound"</span><span class="p">,</span><span class="w">
+      </span><span class="nl">"ground"</span><span class="p">:</span><span class="w"> </span><span class="kc">false</span><span class="w">
     </span><span class="p">}</span><span class="w">
   </span><span class="p">],</span><span class="w">
   </span><span class="nl">"shipping_info"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
